simpliofy with Math.clamp()
Signed-off-by: bscheucher <bernhard.scheucher@gmail.com>